# tags

./: DataLoader.jl  SGD.jl  data_loader.jl  fetch_dataset.sh  matcom.jl  titanic.jl  transform_data.py
hogmild/: .gitignore  Cargo.toml  config.py  graph.py  hogmild.py  mat_comp.py  run.py  sweep_workers.py
hogmild/configs/: default.yaml
hogmild/hogmild/: Cargo.toml
hogmild/hogmild-sim/: Cargo.toml
hogmild/hogmild-sim/src/: simulator.rs
hogmild/hogmild-sim/src/data_loader/: mod.rs
hogmild/hogmild/src/: args.rs  data_structures.rs  main.rs  mat_comp.rs  simulator.rs
hogmild/hogmild/src/data_loader/: mod.rs
hogmild/hogmild_sim/: Cargo.toml
hogmild/hogmild_sim/src/: args.rs  data_structures.rs  main.rs  simulator.rs
hogmild/hogmild_sim/src/data_loader/: netflix.rs
hogmild/scripts/: config.py  graph.py  run.py
hogmild/src/: args.rs  data_loader.rs  data_structures.rs  main.rs  mat_comp.rs
hogmild/src/data_loader/: mod.rs  netflix.rs
hogmild/src/data_structures/: hash_map_spmat.rs  mod.rs
hogmild/src/sgd/: matrix_completion.rs  mod.rs  schedule_simulation.rs
hogmild/src/sgd/schedule_simulation/: channel.rs  mod.rs  params_server.rs  worker.rs
hogmild/utils/: config.py  graph.py  hogmild_sim.py
julia_protoype/: SGD.jl
protytype/: DataLoader.jl
scripts/: transform_data.py  transform_netflix_data.py
