[package]
name = "hogmild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = "0.8.2"
debug_print = "1.0.0"
indicatif = "0.17.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
num-traits = "0.2.15"
once_cell = "1.17.2"
rayon = "1.7.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
