[package]
name = "hogmild_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
